<resources>
    <string name="app_name">어따세워</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Network status snack bar -->
    <string name="snack_bar_content_internet_disconnected">인터넷 연결이 끊겼습니다.\n네트워크 상태를 확인해주세요!</string> <!--network is not conneceted-->

    <!-- GPS status snack bar -->
    <string name="snack_bar_content_gps_disconnected">위치 서비스가 꺼져 있습니다.\n위치 기능 사용을 설정하시겠습니까?</string> <!--network is not conneceted-->


    <!-- others -->
    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <!-- login activity -->
    <string name="skip">건너뛰기</string>
    <string name="fail_login">로그인에 실패하였습니다.</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- review activity -->
    <string name="favorite">즐겨찾기</string>
    <string name="visited">가봤어요</string>
    <string name="write_review">리뷰작성</string>
    <string name="edit_review">리뷰수정</string>
    <string name="add_list">목록추가</string>

    <string name="parking_lot_introduce">주차장 정보</string>
    <string name="jibun">지번</string>
    <string name="find_road">길 찾기</string>
    <string name="navigation">내비게이션</string>
    <string name="call_taxi">콜택시</string>
    <string name="copy_address">주소 복사</string>
    <string name="call_parking_lot">전화걸기</string>
    <string name="operation_time">영업시간</string>
    <string name="weekday">평일</string>
    <string name="saturday">토요일</string>
    <string name="holiday">공휴일</string>
    <string name="corona_warning_desc">코로나 19의 영향으로 주차장 운영에 변동이 있을 수 있습니다.\n주차장으로 문의 후 방문 부탁드립니다.</string>
    <string name="fee">요금정보</string>
    <string name="base_fee">주차기본요금</string>
    <string name="additional_fee">추가비용</string>
    <string name="payment_method">결제방법</string>
    <string name="parking_ticket">주차권 정보</string>
    <string name="parking_fee_per_day">1일 주차권 요금</string>
    <string name="parking_fee_per_month">월 정기권 요금</string>
    <string name="parking_review">이용자 리뷰</string>
    <string name="parking_review_more">더 보기 ></string>
    <string name="no_review_text">아직 작성된 리뷰가 없어요!\n주차장을 이용해보시고 솔직한 후기 부탁드립니다.</string>

    <string name="clipboard_label">주차장 주소</string>
    <string name="clipboard_success">클립보드에 주소 복사가 완료되었습니다!</string>
    <string name="clipboard_failed">주소 정보가 없어 복사에 실패하였습니다.</string>
    <string name="choose_app">앱을 선택해주세요.</string>


    <!-- ReviewWriteActivity -->
    <string name="permission_read_denied_1">갤러리에서 사진을 가져오려면 권한이 필요해요!</string>
    <string name="permission_read_denied_2">설정(앱 정보)에서 권한을 허용해주세요!</string>
    <string name="review_write">리뷰 작성</string>
    <string name="rate_all">전체</string>
    <string name="rate_good">좋아요!</string>
    <string name="rate_normal">평범해요!</string>
    <string name="rate_bad">별로에요!</string>
    <string name="rate_edit_text_hint">%s님, 이용하신 주차장은 어떠셨나요? 주차장의 가격이나 시설, 서비스에 대해 리뷰를 작성해주세요!</string>
    <string name="review_review_write_done_text">완료 (%d/10000)</string>
    <string name="write_review_alert_dialog_title">작성하시던 리뷰가 사라져요!</string>
    <string name="write_review_alert_dialog_message">그래도 괜찮으신가요?</string>
    <string name="default_user_nickname">고객</string>
    <string name="image_max_toast">이미지를 최대 \'%d개\' 까지 선택하실 수 있습니다!</string>
    <string name="review_content_empty">리뷰 작성란이 비어 있어요!\n여러분의 소중한 리뷰를 담아주세요!</string>
    <string name="review_upload_success">리뷰 등록이 완료되었어요!</string>
    <string name="review_upload_failed">리뷰 등록에 실패하였어요!</string>


    <!-- marker -->
    <string name="free">무료 주차장</string>
    <string name="pay">유료</string>
    <string name="no_info">정보없음</string>

    <!-- content_main_top.xml -->
    <string name="search_bar_text">목적지를 입력해주세요!</string>

    <!-- layout_main_nav -->
    <string name="require_login">로그인을 해주세요.</string>
    <string name="no_data">로그인 정보</string>
    <string name="menu_notice">공지사항</string>
    <string name="menu_favorite">즐겨찾기</string>
    <string name="menu_guide">서비스 이용안내</string>
    <string name="menu_suggest_edit">정보 수정 제안</string>
    <string name="menu_setting">환경설정</string>
    <string name="inquire">1:1 문의하기</string>

    <!-- permissions -->
    <string name="permission_location_alert">%s을 실행하려면 위치 접근 권한이 필요해요!</string>
    <string name="permission_location_denied_1">앱을 다시 실행하여 위치 권한을 허용해주세요!</string>
    <string name="permission_location_denied_2">설정(앱 정보)에서 위치 권한을 허용해주세요!</string>
    <string name="permission_record_denied">음성 녹음 권한을 허용하지 않으면 기능을 이용할 수 없어요!</string>

    <!-- record bottom sheet dialog -->
    <string name="bottom_sheet_dialog_app_name">어따세워 🚗</string>
    <string name="record_bottom_sheet_dialog_title">이렇게 말해보세요</string>
    <string name="record_bottom_sheet_dialog_subtitle">\"서울특별시 상암동 주차장\"</string>

    <!-- navigation bottom sheet dialog -->
    <string name="navi_bottom_sheet_dialog_title">내비게이션 앱을 선택해주세요.</string>
    <string name="kakao_navi">Kakao 내비게이션</string>
    <string name="naver_navi">Naver 내비게이션</string>
    <string name="tmap_navi">T-map 내비게이션</string>
    <string name="one_navi">원 내비게이션</string>
    <string name="no_app">해당 어플리케이션이 설치되어 있지 않아 플레이스토어로 이동합니다.</string>


    <!-- Recognition Error Type -->
    <string name="error_audio">오디오 에러가 발생했습니다.</string>
    <string name="error_client">응답이 길어 인식이 어렵습니다.\n다시 시도해주시기 바랍니다.</string>
    <string name="error_permission">오디오 권한이 없습니다.\n권한을 설정해주세요!</string>
    <string name="error_network">네트워크 에러가 발생했습니다.</string>
    <string name="error_network_timeout">네트워크 타임아웃이 발생했습니다.</string>
    <string name="error_no_match">응답이 없어 음성인식이 종료되었습니다.</string>
    <string name="error_busy">잠시 후 다시 시도해주세요.</string>
    <string name="error_server">서버 에러가 발생했습니다.</string>
    <string name="error_speech_timeout">응답이 길어 인식이 어렵습니다.\n다시 시도해주시기 바랍니다.</string>
    <string name="error_unknown">알 수 없는 오류가 발생했습니다.</string>

    <!-- Search Activity -->
    <string name="search_bar_address_hint">목적지, 주소 또는 지명 입력</string>
    <string name="search_bar_number_hint">공유주차장 번호 입력</string>
    <string name="search_no_result">검색한 결과나 기록이 없어요!</string>

    <!-- onBackPressed -->
    <string name="backpress_alert">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다.</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Favorite Activity -->
    <string name="favorite_toolbar_title">즐겨찾는 주차장</string>

    <!-- Proposal Activity -->
    <string name="proposal_toolbar_title">@string/menu_suggest_edit</string>
    <string name="proposal_alert_dialog_title">작성하시던 리뷰가 사라져요!</string>
    <string name="proposal_alert_dialog_message">그래도 괜찮으신가요?</string>
    <string name="review_proposal_write_done">확인</string>
    <string name="proposal_image_desc">아래와 같은 사진을 함께 올려주세요!</string>
    <string name="first_proposal_example_image">전경</string>
    <string name="second_proposal_example_image">진입로</string>
    <string name="third_proposal_example_image">요금</string>
    <string name="proposal_option_title">수정항목</string>
    <string name="proposal_option_title_essential">&#160;(필수)</string>
    <string name="proposal_first_option">운영종료</string>
    <string name="proposal_second_option">시간정보</string>
    <string name="proposal_third_option">요금정보</string>
    <string name="proposal_fourth_option">기타정보</string>
    <string name="proposal_content_title">수정사항</string>
    <string name="proposal_edit_text_hint">잘못된 정보나 없는 정보를 알려주세요</string>
</resources>