<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.main.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_notice"
            android:title="@string/menu_notice" />
        <item
            android:id="@+id/menu_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/menu_guide"
            android:title="@string/menu_guide" />
        <item
            android:id="@+id/menu_error"
            android:title="@string/menu_suggest_edit" />
        <item
            android:id="@+id/menu_setting"
            android:title="@string/menu_setting" />
    </group>
</menu>