<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.app.service.parking.presentation.view.proposal.ProposalViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".presentation.view.proposal.ProposalActivity">

                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/action_bar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/toolbar"
                        style="@style/ReviewWriteToolbarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        android:background="@color/white"
                        app:title="@string/proposal_toolbar_title"
                        app:titleTextColor="@color/TitleTextColor" />
                </com.google.android.material.appbar.AppBarLayout>

                <View
                    android:id="@+id/shadow_view"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/shadow_drop"
                    app:layout_constraintTop_toBottomOf="@+id/action_bar" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/proposal_image_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/proposal_image_container"
                    app:layout_constraintTop_toBottomOf="@+id/action_bar"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/proposal_image_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/proposal_image_desc"
                        android:textColor="@color/TitleTextColor"
                        android:textSize="16sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/first_proposal_image"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/first_proposal_image"
                        android:layout_width="@dimen/proposal_example_image_size"
                        android:layout_height="@dimen/proposal_example_image_size"
                        android:layout_marginTop="@dimen/proposal_example_image_margin_top"
                        android:layout_marginRight="@dimen/proposal_example_image_margin_right"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_proposal_example_first"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/second_proposal_image"
                        app:layout_constraintTop_toBottomOf="@+id/proposal_image_desc" />

                    <ImageView
                        android:id="@+id/second_proposal_image"
                        android:layout_width="@dimen/proposal_example_image_size"
                        android:layout_height="@dimen/proposal_example_image_size"
                        android:layout_marginHorizontal="@dimen/proposal_example_image_margin_right"
                        android:layout_marginTop="@dimen/proposal_example_image_margin_top"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_proposal_example_second"
                        app:layout_constraintLeft_toRightOf="@+id/first_proposal_image"
                        app:layout_constraintRight_toLeftOf="@+id/third_proposal_image"
                        app:layout_constraintTop_toBottomOf="@+id/proposal_image_desc" />

                    <ImageView
                        android:id="@+id/third_proposal_image"
                        android:layout_width="@dimen/proposal_example_image_size"
                        android:layout_height="@dimen/proposal_example_image_size"
                        android:layout_marginLeft="@dimen/proposal_example_image_margin_right"
                        android:layout_marginTop="@dimen/proposal_example_image_margin_top"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_proposal_example_third"
                        app:layout_constraintLeft_toRightOf="@+id/second_proposal_image"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/proposal_image_desc" />

                    <TextView
                        android:id="@+id/first_proposal_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/proposal_example_text_margin_top"
                        android:text="@string/first_proposal_example_image"
                        android:textColor="@color/majorDescTextColor"
                        android:textSize="@dimen/proposal_example_text_size"
                        app:layout_constraintLeft_toLeftOf="@+id/first_proposal_image"
                        app:layout_constraintRight_toRightOf="@id/first_proposal_image"
                        app:layout_constraintTop_toBottomOf="@+id/first_proposal_image" />

                    <TextView
                        android:id="@+id/second_proposal_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/proposal_example_text_margin_top"
                        android:text="@string/second_proposal_example_image"
                        android:textColor="@color/majorDescTextColor"
                        android:textSize="@dimen/proposal_example_text_size"
                        app:layout_constraintLeft_toLeftOf="@+id/second_proposal_image"
                        app:layout_constraintRight_toRightOf="@id/second_proposal_image"
                        app:layout_constraintTop_toBottomOf="@+id/second_proposal_image" />

                    <TextView
                        android:id="@+id/third_proposal_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/proposal_example_text_margin_top"
                        android:text="@string/third_proposal_example_image"
                        android:textColor="@color/majorDescTextColor"
                        android:textSize="@dimen/proposal_example_text_size"
                        app:layout_constraintLeft_toLeftOf="@+id/third_proposal_image"
                        app:layout_constraintRight_toRightOf="@id/third_proposal_image"
                        app:layout_constraintTop_toBottomOf="@+id/third_proposal_image" />

                    <LinearLayout
                        android:id="@+id/proposal_photo_upload_btn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/proposal_photo_upload_btn_height"
                        android:layout_marginHorizontal="@dimen/proposal_photo_upload_margin_horizontal"
                        android:layout_marginTop="@dimen/proposal_photo_upload_margin_top"
                        android:background="@drawable/btn_proposal_photo"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/first_proposal_text">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/ic_camera"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="사진으로 알려주기"
                            android:textColor="@color/white"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/proposal_image_container">

                    <TextView
                        android:id="@+id/proposal_option_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/proposal_option_title"
                        android:textColor="@color/TitleTextColor"
                        android:textSize="@dimen/proposal_title_text_size"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/proposal_option_title_essential"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/proposal_title_text_size"
                        app:layout_constraintLeft_toRightOf="@+id/proposal_option_title"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- 첫번째 옵션 -->
                    <LinearLayout
                        android:id="@+id/first_proposal_option"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/proposal_content_margin_top"
                        android:layout_marginRight="6dp"
                        android:background="@color/unselectedOptionColor"
                        android:gravity="center"
                        android:paddingVertical="6dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/second_proposal_option"
                        app:layout_constraintTop_toBottomOf="@+id/proposal_option_title">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="8dp"
                            android:src="@drawable/ic_parking"
                            app:tint="@color/proposalOptionIconColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/proposal_first_option"
                            android:textColor="@color/proposalOptionIconColor"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!-- 두번째 옵션 -->
                    <LinearLayout
                        android:id="@+id/second_proposal_option"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="@dimen/proposal_content_margin_top"
                        android:background="@color/unselectedOptionColor"
                        android:gravity="center"
                        android:paddingVertical="6dp"
                        app:layout_constraintLeft_toRightOf="@+id/first_proposal_option"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/proposal_option_title">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="8dp"
                            android:src="@drawable/ic_clock"
                            app:tint="@color/proposalOptionIconColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/proposal_second_option"
                            android:textColor="@color/proposalOptionIconColor"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!-- 세번째 옵션 -->
                    <LinearLayout
                        android:id="@+id/third_proposal_option"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="6dp"
                        android:background="@color/unselectedOptionColor"
                        android:gravity="center"
                        android:paddingVertical="6dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/fourth_proposal_option"
                        app:layout_constraintTop_toBottomOf="@+id/first_proposal_option">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="8dp"
                            android:src="@drawable/ic_fee"
                            app:tint="@color/proposalOptionIconColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/proposal_third_option"
                            android:textColor="@color/proposalOptionIconColor"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!-- 네번째 옵션 -->
                    <LinearLayout
                        android:id="@+id/fourth_proposal_option"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="6dp"
                        android:background="@color/unselectedOptionColor"
                        android:gravity="center"
                        android:paddingVertical="6dp"
                        app:layout_constraintLeft_toRightOf="@+id/third_proposal_option"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/second_proposal_option">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="8dp"
                            android:src="@drawable/ic_etc"
                            app:tint="@color/proposalOptionIconColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/proposal_fourth_option"
                            android:textColor="@color/proposalOptionIconColor"
                            android:textSize="16sp" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/proposal_content_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/proposal_title_margin_top"
                        android:text="@string/proposal_content_title"
                        android:textColor="@color/TitleTextColor"
                        android:textSize="@dimen/proposal_title_text_size"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/third_proposal_option" />

                    <EditText
                        android:id="@+id/proposal_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/proposal_edit_text_container_height"
                        android:layout_marginTop="@dimen/proposal_content_margin_top"
                        android:background="@color/proposalContentEditTextColor"
                        android:gravity="top|left"
                        android:hint="@string/proposal_edit_text_hint"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="6dp"
                        android:textSize="@dimen/proposal_edit_text_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/proposal_content_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/review_done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_review_done_btn"
            android:clickable="false"
            android:enabled="false"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:paddingVertical="@dimen/review_done_btn_padding_vertical"
            android:text="@string/review_proposal_write_done"
            android:textColor="@color/white"
            android:textSize="@dimen/review_done_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>